--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,7 @@
 <resources>
     <string name="app_name">결정장애 물리치기</string>
-    <string name="Img_str">START</string>
-    <string name="Img_end">STOP</string>
+    <string name="img_str">START</string>
+    <string name="img_end">STOP</string>
+
 </resources>
+
